@@ -1,0 +1,2 @@
+-- Drop the calendar_date foreign key on holiday table
+ALTER TABLE holiday DROP COLUMN calendar_date_id;
