@@ -1,0 +1,2 @@
+-- Drop the foreign key constraint to calendar_date
+ALTER TABLE holiday DROP FOREIGN KEY holiday_ibfk_2;
