@@ -1,0 +1,25 @@
+-- Populate the holiday table
+INSERT INTO holiday (name, holiday_type_id) VALUES
+	('New Year\'s Day', 1),
+	('Martin Luther King Jr. Day', 1),
+	('President\'s Day', 1),
+	('Easter Sunday', 2),
+	('Mother\'s Day', 2),
+	('Memorial Day', 1),
+	('Juneteenth (in lieu)', 1),
+	('Juneteenth', 1),
+	('Father\'s Day', 2),
+	('Independence Day', 1),
+	('Independence Day (in lieu)', 3),
+	('Labor Day', 1),
+	('US Indigenous People\'s Day', 3),
+	('Columbus Day', 1),
+	('Veterans Day', 1),
+	('Thanksgiving', 1),
+	('Day after Thanksgiving', 3),
+	('Christmas Holiday', 3),
+	('Christmas Day (in lieu)', 3),
+	('Christmas Day', 1),
+	('New Year\'s Day Holiday', 3),
+	('New Year\'s Day (in lieu)', 1)
+;
